# parsing

./: .env.example  .gitignore  .pre-commit-config.yaml  Antofagasta_capex.txt  First_Majestic_capex.txt  README.md  capex_summary.py  capex_table_extractor.py  capex_tables.xlsx  config.py  main.py  pyproject.toml  requirements.txt
loaders/: base_loader.py  pdf_loader.py
logger/: logger.py
src/agentic/: agentic_rag.py
src/chunker/: text_chunker.py
src/embedder/: embedder.py
src/graph/: rag_graph.py
src/loader/: capex_loader.py  document_loader.py
src/logger/: log_setup.py
src/qa/: qa_engine.py
src/reranker/: reranker.py
src/retriever/: retriever.py
src/vectorstore/: chroma_store.py
